Feature/add update portal page uc
